fix styles for drop down cutting off image

--- a/src/styles/components/cart-dropdown.scss
+++ b/src/styles/components/cart-dropdown.scss
@@ -18,7 +18,8 @@
 }
 
 .cart-items {
-  height: 240px;
+  padding: 20px 0px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   overflow: auto;
